schema/testdata/validation_attribute_on_invalid_subscriber_arg/schema.keel
model Account {
    fields {
        name Text
    }

    actions {
        create createAccount() with (name)
    }

    @on([create])
    @on([create], 123)
    @on([create], verify.Email)
    @on([create], VerifyEmail)
    @on([create], verifyEmail, nope)
    @on([create], [verifyEmail])
    @on([create], verify_Email)
}
